# rolling-in-the-diff

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: delta_generation.rs  delta_generator.rs  lib.rs  main.rs  patch.rs  rolling_checksum.rs  signature_generation.rs  signature_generator.rs  strong_hash.rs
src/delta_generation/: adler32.rs  rolling_adler32.rs
src/delta_generator/: adler32.rs
src/rolling_checksum/: rolling_adler32.rs
src/strong_hash/: md5.rs
