[package]
name = "rolling-in-the-diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adler32 = "1.2.0"
bitvec = "1.0.1"
rayon = "1.5.3"
md5 = "0.7.0"
serde = { version = "1.0.144", features = ["derive"] }
bincode2 = "2.0.1"
clap = { version = "3.2.17", features = ["derive"] }
indicatif = "0.17.0-rc.11"
log = "0.4.17"
env_logger = "0.9.0"
anyhow = "1.0.62"
